[package]
name = "kelasu-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.4.1"
kelasu-game = { path = "../kelasu-game" }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
thiserror = "1.0.37"
rand = "0.8.5"
